# MultiFileHandlerIPC

./: .gitignore  CMakeLists.txt  README.md
include/: FileHandler.h  Requester.h
src/: FileHandler.cpp  Requester.cpp  coredump  filehandler  old_bashrc_backup  requester
